docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-linked-card.scss
.hb-vertical-linked-card {
  position: relative;
  background-color: transparent;

  &:hover,
  &:focus {
    cursor: pointer;
  }

  @include hb-themes(('colorful', 'airy')) {
    // The margin-top matches the margin-top on both the title and image to prevent
    // overlap issues.
    // The margin-left matches the negative margin-left on the title to prevent
    // overlap issues.
    margin: hb-spacing-width('xs') 0 0 hb-calculate-rems(31px);
    padding-bottom: hb-calculate-rems(28px);
    @include hb-global-color('color', 'white');

    $hb-bg--fallback: hb-get-pairing-color('primary-dark', $hb-colorful-default, $hc-colorful-pairings);
    $hb-bg--pairing: var(--palette--primary-dark);

    @include hb-vertical-card-background-block(transparent, $hb-bg--fallback, $hb-bg--pairing);
  }

  .hb-stretch-vertical-linked-cards & {
    display: flex;
    flex-flow: column nowrap;
  }

  &__img {
    overflow: hidden;

    @include hb-themes(('colorful', 'airy')) {
      @include grid-media-min('sm') {
        .field-hs-row-components & {
          margin-top: hb-calculate-rems(-24px);
        }
      }
    }

    img {
      width: 100%;
      transition: hb-transition(transform);

      .hb-vertical-linked-card:hover &,
      .hb-vertical-linked-card:focus &,
      .hb-vertical-linked-card.is-focused & {
        transform: scale($hb-image-hover-scale);
      }
    }
  }

  .field-media-image {
    margin: 0;
  }

  &__title {
    // Without this the negative margins on the title cause it to lay under the
    // image. Adding position relative makes sure everything is layered correctly.
    position: relative;
    font-size: hb-calculate-rems(20px);
    hyphens: auto;
    line-height: 118%;
    word-break: break-word;
    transition: hb-transition(background-color);

    @include grid-media-min('sm') {
      font-size: hb-calculate-rems(24px);
    }

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(27px);
    }

    @include hb-themes(('colorful', 'airy')) {
      padding: hb-calculate-rems(20px) hb-calculate-rems(54px) hb-calculate-rems(20px) hb-calculate-rems(20px);
      margin: 0 hb-calculate-rems(20px) 0 hb-calculate-rems(-31px);
      @include hb-pairing-color('background-color', 'secondary');

      @include grid-media-min('sm') {
        margin: hb-calculate-rems(-24px) hb-calculate-rems(20px) 0 hb-calculate-rems(-31px);
      }
    }

    @include hb-traditional {
      padding: hb-calculate-rems(16px) hb-calculate-rems(54px) hb-calculate-rems(16px) hb-calculate-rems(16px);
      @include hb-global-color('color', 'white');
      @include hb-pairing-color('background-color', 'primary');
      margin: 0;
    }

    // Only extend the title if it's not
    // the last visual element on the card.
    &:nth-last-child(2) {
      .hb-stretch-vertical-linked-cards & {
        flex: 1 1 auto;
      }
    }

    .hb-vertical-linked-card:hover &,
    .hb-vertical-linked-card:focus &,
    .hb-vertical-linked-card.is-focused & {
      @include hb-themes(('colorful', 'airy')) {
        @include hb-pairing-color('background-color', 'secondary-darken-12');
      }

      @include hb-traditional {
        @include hb-pairing-color('background-color', 'primary-dark');
        text-decoration: underline;
      }
    }

    .hb-vertical-linked-card:hover &::after,
    .hb-vertical-linked-card:focus &::after,
    .hb-vertical-linked-card.is-focused &::after {
      background-position: 6px;
    }

    // If this title is in a grid or row,
    // keep it smaller longer.
    .hb-grid &,
    .ptype-hs-row &,
    .ptype-hs-collection &,
    .ptype-hs-priv-collection & {
      @include grid-media-min('sm') {
        font-size: hb-calculate-rems(20px);
        line-height: 118%;
      }

      @include grid-media-min('lg') {
        font-size: hb-calculate-rems(24px);
        line-height: 121%;
      }
    }

    &::after {
      content: '';
      display: block;
      height: hb-calculate-rems(48px);
      width: hb-calculate-rems(48px);
      @include hb-icon-link-arrow('white');

      position: absolute;
      right: 0;

      transition: hb-transition(background-position);

      @include hb-themes(('colorful', 'airy')) {
        bottom: hb-calculate-rems(10px);
      }

      @include hb-traditional {
        bottom: hb-calculate-rems(7px);
      }
    }
  }

  &__title__link {
    @include hb-global-color('color', 'white');
    text-decoration: none;
  }

  &__description {
    @include hb-description;
    word-break: break-word;
    flex: 1 1 auto;

    @include hb-themes(('airy', 'colorful')) {
      padding: hb-calculate-rems(20px) hb-calculate-rems(20px) 0;
    }

    @include hb-traditional {
      @include hb-pairing-color('background-color', 'tertiary-reversed');
      padding: hb-calculate-rems(16px) hb-calculate-rems(16px) hb-calculate-rems(28px);
    }

    @include grid-media-min('sm') {
      font-size: hb-calculate-rems(18px);
    }

    .field-hs-postcard-body {
      margin-bottom: 0;
    }

    a {
      @include hb-traditional {
        @include hb-global-color('color', 'black');
      }

      &:hover,
      &:focus {
        @include hb-traditional {
          @include hb-global-color('color', 'gray-dark');
        }
      }
    }
  }
}

